# ascii-art-mcp

./: .gitignore  README.md  main.py  pyproject.toml
ascii-art-nodejs/: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  百宝箱部署指南.md
ascii-art-nodejs/src/: index.ts
ascii-art-python/: README.md  ascii_art_server.py  pyproject.toml  test_mcp_server.py
ascii-art-python/ascii_art_generator.egg-info/: PKG-INFO
docs/: CODE_CHANGES_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MANIFEST.md  MCP_README.md  PROJECT_STATUS.md  QUICK_START.md  SUPABASE_INTEGRATION_SUMMARY.md  claude_config_example.md
